tests/errors/overflow.moss
fn main[alloc]() {
  println(uint32_to_string(4294967296));
#                          ^^^^^^^^^^ integer too large
}
